# DBSync

./: pyproject.toml
DBSync/: data_differences.py  data_fetchers.py  main.py  utilities.py
DBSync/config/: mappings.yaml  target.yaml
backup/: hardcoded_script.py
dbsynchronization/DBSync/: auto_synchronize.py  data_synchronization.py  fetch_indirect_key.py  main.py
dbsynchronization/DBSync/config/: source.yaml
dbsynchronization/backup/: hardcoded_script.py
